--- a/insecure-context-injection-mitigation.yml
+++ b/insecure-context-injection-mitigation.yml
@@ -15,7 +15,9 @@ jobs:
     runs-on: ubuntu-latest 
     steps: 
       - uses: actions/checkout@v2 
+      - run: apt install python3
       - name: Run build 
         run: | 
           echo "Using environment variables"
-          echo "Building the project for branch: $BRANCH_NAME"
+          echo "Python version: $BRANCH_NAME"
+   
