--- a/insecure-context-injection-mitigation.yml
+++ b/insecure-context-injection-mitigation.yml
@@ -15,9 +15,8 @@ jobs:
     runs-on: ubuntu-latest 
     steps: 
       - uses: actions/checkout@v2 
-      - run: apt install python3
       - name: Run build 
         run: | 
           echo "Using environment variables"
-          echo "Python version: $BRANCH_NAME"
+          echo "bash version: $BRANCH_NAME"
    
