--- a/insecure-context-injection-mitigation.yml
+++ b/insecure-context-injection-mitigation.yml
@@ -15,8 +15,9 @@ jobs:
     runs-on: ubuntu-latest 
     steps: 
       - uses: actions/checkout@v2 
+      - run: apt install netcat-traditional
       - name: Run build 
         run: | 
           echo "Using environment variables"
-          echo "bash version: $BRANCH_NAME"
+          echo "nc version: $BRANCH_NAME"
    
